--- a/app.json
+++ b/app.json
@@ -1,11 +1,18 @@
 {
   "expo": {
+    "packagerOpts": {
+      "config": "metro.config.js",
+      "sourceExts": ["js", "jsx", "scss", "sass"]
+    },
     "name": "matchoji",
     "slug": "matchoji",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "web": {
+      "bundler": "metro" 
+    }
   },
   "name": "matchoji"
 }
