--- a/package.json
+++ b/package.json
@@ -10,18 +10,33 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
-    "expo": "~48.0.9",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "babel-plugin-react-native-classname-to-style": "^1.2.2",
+    "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
+    "expo": "^48.0.9",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "node-sass": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-emoji": "^0.5.0",
     "react-native": "0.71.4",
+    "react-native-css-transformer": "^1.2.4",
     "react-native-game-engine": "^1.2.0",
-    "react-native-web": "~0.18.10"
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-paper": "^5.5.2",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-sass-transformer": "^2.0.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10",
+    "react-navigation": "^4.4.4",
+    "sass": "^1.60.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-rename-jsx-attribute": "^0.2.4"
   },
   "private": true
 }
