--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4",
+    "react-xarrows": "^2.0.2",
     "sass": "^1.60.0"
   },
   "devDependencies": {
