--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "matchoji",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "expo": "^48.0.9",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-native": "0.71.4",
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "babel-plugin-react-native-classname-to-style": "^1.2.2",
     "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
-    "expo": "^48.0.9",
     "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.4",
     "node-sass": "^8.0.0",
-    "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
     "react-native-css-transformer": "^1.2.4",
     "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "~2.9.0",
