--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "devtools": "react-devtools"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
@@ -37,7 +38,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-plugin-rename-jsx-attribute": "^0.2.4"
+    "babel-plugin-rename-jsx-attribute": "^0.2.4",
+    "react-devtools": "^4.27.4"
   },
   "private": true
 }
