--- a/package.json
+++ b/package.json
@@ -1,35 +1,41 @@
 {
   "name": "matchoji",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "devtools": "react-devtools"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.6",
     "babel-plugin-react-native-classname-to-style": "^1.2.2",
     "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
-    "expo": "^48.0.9",
+    "expo": "~48.0.11",
+    "expo-build-properties": "~0.6.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.20.0",
     "node-sass": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.6",
     "react-native-css-transformer": "^1.2.4",
     "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-paper": "^5.5.2",
+    "react-native-iap": "^11.0.0-rc.7",
+    "react-native-paper": "^5.7.0",
     "react-native-reanimated": "~2.14.4",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-sass-transformer": "^2.0.0",
     "react-native-screens": "~3.20.0",
+    "react-native-simple-toast": "^2.0.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4",
